# plutosvg

./: CMakeLists.txt
plutojni/: CMakeLists.txt  plutojni.c  plutojni.h
